Add SEO description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ithink</title>
+    <meta name="description" content="Global online messaging, void of any borders." />
   </head>
   <body>
     <div id="app"></div>
